--- a/Kasper Website/Kasper.html
+++ b/Kasper Website/Kasper.html
@@ -330,7 +330,7 @@
   <div class="quote">
     <div class="container">
       <q>Birds don't just fly, they fall down and get up. Nobody learns without getting it wrong.</q>
-      <span>Alaa Baligh</span>
+      <span>Lorem</span>
     </div>
   </div>
   <!--End Quote-->
